# edit-cabal-version.github-action

./: .gitmodules  Makefile  README.md  action.yml  test.cabal
.github/workflows/: on-push-to-master.yaml  on-push.yaml  test.yaml
app/: app.cabal  stack.yaml
app/app/: Main.hs
app/edit-cabal-version/: EditCabalVersion.hs
app/github-action/: Main.hs
app/test/: Main.hs
builds/app/app/: Main.hs
builds/app/edit-cabal-version/: EditCabalVersion.hs
docker/: Dockerfile
stages/app/edit-cabal-version/: EditCabalVersion.hs
stages/docker/: Dockerfile
