cabal-version: 3.0
name:          app
version:       0

common base-settings
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common executable-settings
  import:      base-settings
  ghc-options: -O2 -threaded "-with-rtsopts=-N -I0 -qg"

library edit-cabal-version
  import:          base-settings
  hs-source-dirs:  edit-cabal-version
  exposed-modules: EditCabalVersion
  build-depends:
    , attoparsec
    , coalmine
    , rerebase

test-suite test
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , coalmine
    , edit-cabal-version

executable app
  import:         executable-settings
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , coalmine
    , edit-cabal-version
    , rerebase
